# cost_estimation_ml

./: .gitignore  001 laskentapohja, Cloud1.xlsx  README.md  agent_file_demo.py  cat_listing copy.xlsx  data_esikasittely.ipynb  features.xlsx  features1.xlsx  helpperi.ipynb  mallien_testit.ipynb  package-lock.json  package.json  pyproject.toml  reno_parser.ipynb  reno_parser_erittelysivu.ipynb  reno_parser_featuret.ipynb  targets.xlsx  testi.ipynb  testit.ipynb  valmis_dataset.xlsx
ML_and_data_parsing/: data_esikasittely.ipynb  laskentapohja_ex.xlsx  reno_parser_featuret.ipynb  testit_laskentapohjilla.ipynb
agent/: agent.py  agent_file_demo_openAI_agents_SDK.py  colpali_testit.ipynb  main.py  pressure_test.ipynb  simple_cosine_sim.ipynb  testit.ipynb  tools.py  utils.py
local_agent/: context.py  main.py  simple_cosine_sim.ipynb  tools.py  utils.py
