[project]
name = "cost-estimation-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.94.0",
    "ipython>=9.13.0",
    "matplotlib>=3.10.9",
    "matplotlib-inline>=0.2.2",
    "numpy>=2.4.4",
    "ollama>=0.6.2",
    "openai-agents>=0.17.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pillow>=12.2.0",
    "ptpython>=3.0.32",
    "pymupdf>=1.27.2.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tiktoken>=0.13.0",
]
